# watchy-rs

./: .gitignore  Cargo.toml  bacon.toml  build.rs  licence.txt  readme.md
.cargo/: config.toml
src/: battery.rs  display.rs  fonts.rs  lib.rs  main.rs  sticky_signal.rs  time.rs  ui.rs  wifi.rs
tests/: example_test.rs
