cargo-features = ["per-package-target"]

[package]
name = "watchy-rs"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.80"
forced-target = "xtensa-esp32s3-espidf"

[[bin]]
name = "watchy-rs"
harness = false

[lib]
crate-type = ["lib"]
harness = false

[profile.release]
opt-level = "s"
debug = true    # does not get flashed
codegen-units = 1
panic = "abort"

[dependencies]
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git" }
embedded-graphics = "0.8.1"
embassy-executor = { version = "0.5.0", features = ["nightly"] }
esp-hal = { version = "0.19.0", default-features = false, features = [
    "async",
    "defmt",
    "esp32s3",
] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32s3"] }
embassy-sync = "0.6.0"
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-time = { version = "0.3.2", features = ["generic-queue"] }
embassy-embedded-hal = "0.2.0"
esp-backtrace = { version = "0.13.0", features = [
    "panic-handler",
    "esp32s3",
    "defmt",
] }
defmt = "0.3.8"
embedded-hal = "1.0.0"
esp-println = { version = "0.10.0", default-features = false, features = [
    "defmt-espflash",
    "esp32s3",
    "jtag-serial",
] }
critical-section = "1.1.3"
embassy-futures = { version = "0.1.1", features = ["defmt"] }
bma423 = "0.0.3"
async-debounce = "0.1.1"
embedded-hal-async = "1.0.0"
either = { version = "1.13.0", default-features = false }
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
pin-project-lite = "0.2.14"
embedded-nal-async = "0.7.1"
esp-wifi = { version = "0.7.1", default-features = false, features = [
    "esp32s3",
    "wifi",
    "embassy-net",
    "defmt",
    "utils",
    "smoltcp",
    "ipv4",
    "phy-enable-usb",
] }
reqwless = { version = "0.12.1", default-features = false, features = [
    "defmt",
] }
heapless = { version = "0.8.0", features = ["defmt-03", "ufmt"] }
embedded-svc = { version = "0.28.0", default-features = false, features = [
    "nightly",
] }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "defmt",
    "udp",
] }
pin-utils = "0.1.0"
esp-wifi-sys = "0.4.0"
sntpc = { version = "0.3.9", default-features = false, features = ["async"] }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "async",
    "defmt",
    "socket",
    "socket-udp",
] }
itoa = "1.0.11"
time = { version = "0.3.36", default-features = false }
embedded-fonts = { version = "0.1.0" }
ufmt = "0.2.0"
# slint = { version = "1.7.2", default-features = false, features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"] }

[patch.crates-io]
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "44282b18faf77b7ff2fa521eb7995fa46ca16e01" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "44282b18faf77b7ff2fa521eb7995fa46ca16e01" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "44282b18faf77b7ff2fa521eb7995fa46ca16e01" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "44282b18faf77b7ff2fa521eb7995fa46ca16e01" }
embassy-time-queue-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "44282b18faf77b7ff2fa521eb7995fa46ca16e01" }
esp-wifi-sys = { path = "../esp-wifi-sys/esp-wifi-sys" }
embedded-fonts = { path = "../embedded-fonts" }                                                                                     # git = "https://github.com/flyingyizi/embedded-fonts.git"

[dev-dependencies]
embedded-test = { version = "0.4.0", features = [
    "embassy",
    "defmt",
    "external-executor",
] }

[[test]]
name = "example_test"
harness = false
