cargo-features = ["per-package-target"]

[package]
name = "watchy-rs"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.80"
forced-target = "xtensa-esp32s3-espidf"

[[bin]]
name = "watchy-rs"
harness = false

[lib]
crate-type = ["lib"]
harness = false

[profile.release]
opt-level = "s"
lto = "thin"
debug = true    # does not get flashed

[dependencies]
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git" }
embedded-graphics = "0.8.1"
embassy-executor = { version = "0.5.0", features = ["nightly"] }
esp-hal = { version = "0.19.0", features = ["async", "defmt", "esp32s3"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32s3"] }
embassy-sync = "0.6.0"
static_cell = "2.1.0"
embassy-time = { version = "0.3.2", features = ["generic-queue"] }
embassy-embedded-hal = "0.2.0"
esp-backtrace = { version = "0.13.0", features = [
    "panic-handler",
    "esp32s3",
    "defmt",
] }
defmt = "0.3.8"
embedded-hal = "1.0.0"
esp-println = { version = "0.10.0", default-features = false, features = [
    "defmt-espflash",
    "esp32s3",
    "jtag-serial",
] }
critical-section = "1.1.3"
embassy-futures = { version = "0.1.1", features = ["defmt"] }
bma423 = "0.0.3"
async-debounce = "0.1.1"
embedded-hal-async = "1.0.0"
either = { version = "1.13.0", default-features = false }
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
pin-project-lite = "0.2.14"
